--- a/Videos.html
+++ b/Videos.html
@@ -9,7 +9,7 @@
     <body>
         <div>
             <h1>This is the Video page!</h1>
-            <h1><a href="index.html">Home</a></link></h1>
+            <h1><a href="index.html">Home</a></h1>
             <h1><a href="Gallery.html">Gallery</a></h1>
             <h1><a href="Videos.html">Videos</a></h1>
             <h1><a href="FAQ.html">FAQ</a></h1>
