--- a/FAQ.html
+++ b/FAQ.html
@@ -13,7 +13,8 @@
             <h1><a href="Gallery.html">Gallery</a></h1>
             <h1><a href="Videos.html">Videos</a></h1>
             <h1><a href="FAQ.html">FAQ</a></h1>
-            <p><strong></strong></p>
+            <p><strong>Who/What is USS Enterprise?</strong></p>
+            <p>Enterprise is the 2nd carrier of Yorktown-class Aircraft Carriers. She has an impressive service history in the Pacific Theatre in WW2 with 20 battle stars. That's more than any other American Ship in the war.</p>
         </div>
     </body>
 </html>
