--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div>
-            <h1 class="nav">This is the home page of USS Enterprise!</h1>
+            <h1 id="welcome">This is the home page of USS Enterprise!</h1>
             <h1 class="nav"><a href="Gallery.html">Gallery</a></h1>
             <h1 class="nav"><a href="Videos.html">Videos</a></h1>
             <h1 class="nav"><a href="FAQ.html">FAQ</a></h1>
