--- a/Videos.html
+++ b/Videos.html
@@ -14,7 +14,8 @@
             <h1><a href="Videos.html">Videos</a></h1>
             <h1><a href="FAQ.html">FAQ</a></h1>
             <p><strong></strong></p>
-            <iframe src="https://www.youtube.com/embed/FE6GZuUONmM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/FE6GZuUONmM" title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p id="source">Video by the History YouTube channel</p>
         </div>
     </body>
 </html>
